# qa_system

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  data_loader.py  main.py  qa_system.py  utils.py
tests/: __init__.py  test_qa_system.py
